--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "lint": "eslint",
+    "lint": "eslint src/**",
+    "lint:fix": "eslint src/** --fix",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
@@ -16,11 +17,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "8.21.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "nodemon": "2.0.19",
-    "prettier": "2.7.1"
+    "eslint": "8.46.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.28.0",
+    "nodemon": "3.0.1"
   },
   "dependencies": {
     "@hapi/boom": "10.0.0",
@@ -30,13 +30,13 @@
     "express": "4.18.1",
     "@faker-js/faker": "7.4.0",
     "joi": "17.6.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "9.0.1",
     "nodemailer": "6.7.7",
     "passport": "0.6.0",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "pg": "8.7.3",
-    "sequelize": "6.21.3",
+    "sequelize": "6.32.1",
     "sequelize-cli": "6.4.1"
   }
 }
