--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
-    "migrations:delete": "sequelize-cli db:migrate:undo:all"
+    "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "e2e": "jest --config ./jest-e2e.json --verbose --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -20,15 +21,16 @@
     "eslint": "8.46.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.28.0",
+    "jest": "29.6.2",
     "nodemon": "3.0.1"
   },
   "dependencies": {
+    "@faker-js/faker": "7.4.0",
     "@hapi/boom": "10.0.0",
     "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
-    "@faker-js/faker": "7.4.0",
     "joi": "17.6.0",
     "jsonwebtoken": "9.0.1",
     "nodemailer": "6.7.7",
@@ -37,6 +39,7 @@
     "passport-local": "1.0.0",
     "pg": "8.7.3",
     "sequelize": "6.32.1",
-    "sequelize-cli": "6.4.1"
+    "sequelize-cli": "6.4.1",
+    "supertest": "^6.3.3"
   }
 }
