--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
     "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "seed:all": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all",
     "e2e": "NODE_ENV=e2e jest --config ./jest-e2e.json --verbose --detectOpenHandles --forceExit",
     "e2e:coverage": "NODE_ENV=e2e jest --config ./jest-e2e.json --verbose --coverage"
   },
@@ -42,6 +44,7 @@
     "pg": "8.7.3",
     "sequelize": "6.32.1",
     "sequelize-cli": "6.4.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "umzug": "^3.3.1"
   }
 }
